[#005][Fix][Front-end] Correção na troca do <section> pelo <div>

--- a/paginaLogin/loginCliente/loginCli.html
+++ b/paginaLogin/loginCliente/loginCli.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <section>
+   <div class="conteiner">
         <div class="login">
                 <h1>Login do Cliente</h1>
                     <!-- Inputs de recolhimento do dados -->
@@ -24,7 +24,7 @@
                     <!-- Botão de enviar dados -->
                     <input type="submit" value="Realizar Login" onclick="login()" class="buttonLogin">
         </div>
-    </section>
+    </div>
 
     <div class="rodape">
         <footer>
