[#008][Front-end][Feat] Atualizado os comandos e estilos da Página de Seleção.

--- a/paginaDeSelecao/selecao.html
+++ b/paginaDeSelecao/selecao.html
@@ -11,15 +11,15 @@
     <section>
         <h1>Selecione seu login</h1>
         <div class="selecoes">
-            <div class="Cliente">
+            <a href="../paginaLogin/loginCliente/loginCli.html" class="Cliente">
                 <div class="perfilCircle"><img src="perfil.png" alt="Perfil Cliente" class="perfilCliente"></div>
                 <h2>Cliente</h2>
-            </div>
+            </a>
         
-            <div class="Vendedor">
+            <a href="../paginaLogin/loginVendedor/loginVen.html" class="Vendedor">
                 <div class="perfilCircle"><img src="Perfil.png" alt="Perfil Vendedor" class="perfilVendedor"></div>
                 <h2>Vendedor</h2>
-            </div>
+            </a>
         </div>
     </section>
 
